--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class "profile-pic" src="C:\Users\camco\OneDrive\Documents\Software Engineering\CSS - My Site\images\circle-cropped.png" alt="Cameron-Cole">
+      <img class "profile-pic" src="circle-cropped.png" alt="Cameron-Cole">
       <h2>Hello.</h2>
       <p>My name is Cameron Cole and I am an Inventory Analyst at Target. I graduated from the University of Wisconsin - Madison with a Bachelor of Arts degree in Economics and Applied Mathematics. I am an aspiring Software Engineer.</p>
     </div>
@@ -27,12 +27,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="programming-icon" src="C:\Users\camco\OneDrive\Documents\Software Engineering\CSS - My Site\images\programming_icon.png" alt="programming-icon">
+        <img class="programming-icon" src="programming_icon.png" alt="programming-icon">
         <h3>Programming</h3>
         <p>I am a skilled developer using skills and tools such as Python, HTML, CSS, SQL, Julia, Matlab, and Javascript.</p>
       </div>
       <div class="skill-row">
-        <img class="math-icon" src="C:\Users\camco\OneDrive\Documents\Software Engineering\CSS - My Site\images\math_icon.png" alt="math-icon">
+        <img class="math-icon" src="math_icon.png" alt="math-icon">
         <h3>Mathematics</h3>
         <p>I have a degree in Mathematics from the Univeristy of Wisconsin - Madison and have taken coursework in probability, stochastic processes, real analysis, data science and statistics.</p>
       </div>
