--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/cam-cole/">LinkedIn</a>
-    <a class="footer-link" href="https://www.youtube.com/watch?v=O9ejXv5Er6M">Memes</a>
+    <a class="footer-link" href="https://www.youtube.com/">Memes</a>
     <a class="footer-link" href="https://github.com/cam-cole">GitHub</a>
     <p class="copyright">© 2021 Cameron Cole.</p>
   </div>
