--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
   <div class="top-container">
     <h1>I'm Cameron</h1>
-    <h2>an aspiring Software Engineer</h2>
+    <h2>a data/programming enthusiast</h2>
   </div>
   <div class="middle-container">
     <div class="profile">
       <img class "profile-pic" src="circle-cropped.png" alt="Cameron-Cole">
       <h2>Hello.</h2>
-      <p>My name is Cameron Cole and I am an Inventory Analyst at Target. I graduated from the University of Wisconsin - Madison with a Bachelor of Arts degree in Economics and Applied Mathematics. I am an aspiring Software Engineer.</p>
+      <p>My name is Cameron Cole and I am an Inventory Analyst at Target. I graduated from the University of Wisconsin - Madison with a Bachelor of Arts degree in Economics and Applied Mathematics.</p>
     </div>
     <hr>
 
