--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="top-container">
     <h1>I'm Cameron</h1>
-    <h2>a data/programming enthusiast</h2>
+    <h2>a programming and mathematics enthusiast</h2>
   </div>
   <div class="middle-container">
     <div class="profile">
